--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,19 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="your_next_class">Your Next Class</string>
     <string name="today_schedule">Today\'s Schedule</string>
-    <string name="instructions">Instructions come here</string>
+    <string name="share">Download the VITTY extention and app now!\nExtension: https://dscv.it/vitty-extension\nAndroid App: https://dscv.it/vitty-app</string>
+    <string name="instructions_1">1. Download the Chrome Extension from:</string>
+    <string name="instructions_1_link"><u>https://dscv.it/vitty-extension</u></string>
+    <string name="instructions_2">2. Log in with the same Google Account as shown above.</string>
+    <string name="instructions_3">3. Upload a screenshot of your timetable.</string>
+    <string name="instructions_3_a">\u25CB Ensure that the screenshot is taken directly from VTOP. It should fit in one single image (Zoom in/out to achieve this).</string>
+    <string name="instructions_3_b">\u25CB DO NOT upload a screenshot that has been compressed/ sent through any means such as Whatsapp, Instagram.</string>
+    <string name="instructions_4">4. Wait for about a minute for the ML Model to fetch your Slots.</string>
+    <string name="instructions_5">5. Review them in the Chrome Extension.</string>
+    <string name="instructions_5_a">\u25CB Individual slot data can be edited by clicking on the edit button next to the corresponding slot.</string>
+    <string name="instructions_5_b">\u25CB If unsatisfied with various slot values, click on upload timetable manually as text. Copy your complete timetable from VTOP in text format.</string>
+    <string name="instructions_6">BRAVO! That\'s it. You are all set to receive push notifications for all your classes on the app as well as chrome.</string>
+    <string name="instructions_7">In addition to this, you can have a sneak peek at your upcoming classes via the Widget.</string>
     <string name="logout">Logout</string>
     <string name="logout_msg">Are you sure?</string>
     <string name="cancel">Cancel</string>
@@ -28,4 +40,5 @@
     <string name="follow_instructions">Please follow the instructions!</string>
     <string name="updated">Updating…</string>
     <string name="battery">Battery</string>
+    <string name="account_details">Account Details</string>
 </resources>
