--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,12 +29,12 @@
     <string name="instructions_1_link"><u>https://dscv.it/vitty-extension</u></string>
     <string name="instructions_2">2. Log in with the same Google Account as shown above.</string>
     <string name="instructions_3">3. Upload a screenshot of your timetable.</string>
-    <string name="instructions_3_a">\u25CB Ensure that the screenshot is taken directly from VTOP. It should fit in one single image (Zoom in/out to achieve this).</string>
-    <string name="instructions_3_b">\u25CB DO NOT upload a screenshot that has been compressed/ sent through any means such as Whatsapp, Instagram.</string>
-    <string name="instructions_4">4. Wait for about a minute for the ML Model to fetch your Slots.</string>
-    <string name="instructions_5">5. Review them in the Chrome Extension.</string>
-    <string name="instructions_5_a">\u25CB Individual slot data can be edited by clicking on the edit button next to the corresponding slot.</string>
-    <string name="instructions_5_b">\u25CB If unsatisfied with various slot values, click on upload timetable manually as text. Copy your complete timetable from VTOP in text format.</string>
+    <string name="instructions_3_a">\u25CB Ensure that the screenshot is taken directly from VTOP. It should fit in one single image.</string>
+    <string name="instructions_3_b">\u25CB DO NOT upload a screenshot that has been compressed or sent through social media.</string>
+    <string name="instructions_4">4. Review them in the Chrome Extension.</string>
+    <string name="instructions_4_a">\u25CB Individual slot data can be edited by clicking on the edit button.</string>
+    <string name="instructions_4_b">\u25CB If unsatisfied, click on the three dots and select Upload as Text.</string>
+    <string name="instructions_5">5. When done, click on Upload.</string>
     <string name="instructions_6">BRAVO! That\'s it. You are all set to receive push notifications for all your classes on the app as well as chrome.</string>
     <string name="instructions_7">In addition to this, you can have a sneak peek at your upcoming classes via the Widget.</string>
     <string name="logout">Logout</string>
