--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,14 @@
     <string name="updated">Updating…</string>
     <string name="battery">Battery</string>
     <string name="account_details">Account Details</string>
+    <string name="notif_group">Courses</string>
+    <string name="complete_msg">You have successfully completed setting up your timetable! You deserve a pat on your back!</string>
+    <string name="skip">Skip</string>
+    <string name="widgets">Widgets</string>
+    <string name="about_widgets">Go to your home screen, long press and add widget!\n\nYou have two widgets to choose from:\n1. Today\'s Schedule: This shows your current day\'s classes.\n2. Next class: This gives you the details about your next upcoming class.</string>
+    <string name="about_notifications">Get control of the notifications by tapping on ⋮ > Notifications.\n\nThere you can individually turn on and off notifications for your classes (Android 8+ only).</string>
+    <string name="about_battery">To get notifications on time, keep the battery optimisations for the app turned off.\n\nTo change this setting, tap on ⋮ > Battery.</string>
+    <string name="final_heading">Let\'s go!</string>
+    <string name="about_final">You\'re all set to start using the app.</string>
+    <string name="congratulations">Congratulations!</string>
 </resources>
