--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,11 +31,11 @@
     <string name="instructions_3">3. Upload a screenshot of your timetable.</string>
     <string name="instructions_3_a">\u25CB Ensure that the screenshot is taken directly from VTOP. It should fit in one single image.</string>
     <string name="instructions_3_b">\u25CB DO NOT upload a screenshot that has been compressed or sent through social media.</string>
-    <string name="instructions_4">4. Review them in the Chrome Extension.</string>
+    <string name="instructions_4">4. Review it in the Chrome Extension.</string>
     <string name="instructions_4_a">\u25CB Individual slot data can be edited by clicking on the edit button.</string>
     <string name="instructions_4_b">\u25CB If unsatisfied, click on the three dots and select Upload as Text.</string>
     <string name="instructions_5">5. When done, click on Upload.</string>
-    <string name="instructions_6">BRAVO! That\'s it. You are all set to receive push notifications for all your classes on the app as well as chrome.</string>
+    <string name="instructions_6">BRAVO! That\'s it. You did it!</string>
     <string name="instructions_7">In addition to this, you can have a sneak peek at your upcoming classes via the Widget.</string>
     <string name="logout">Logout</string>
     <string name="logout_msg">Are you sure?</string>
@@ -56,4 +56,5 @@
     <string name="final_heading">Let\'s go!</string>
     <string name="about_final">You\'re all set to start using the app.</string>
     <string name="congratulations">Congratulations!</string>
+    <string name="title_instructions">Instructions</string>
 </resources>
