--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="your_next_class">Your Next Class</string>
     <string name="today_schedule">Today\'s Schedule</string>
     <string name="share">Share</string>
-    <string name="share_text">Download the VITTY extension and app now!\nExtension: https://dscv.it/vitty-extension\nAndroid App: https://dscv.it/vitty-app</string>
+    <string name="share_text">Download the VITTY extension and app now!\nExtension: https://dscv.it/vitty-extension\nAndroid App: https://dscv.it/app/vitty</string>
     <string name="instructions_1">1. Download the Chrome Extension from:</string>
     <string name="instructions_1_link"><u>https://dscv.it/vitty-extension</u></string>
     <string name="instructions_2">2. Log in with the same Google Account as shown above.</string>
@@ -57,4 +57,19 @@
     <string name="about_final">You\'re all set to start using the app.</string>
     <string name="congratulations">Congratulations!</string>
     <string name="title_instructions">Setup Instructions</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_today_schedule">Today\'s Schedule</string>
+    <string name="settings">Settings</string>
+    <string name="title_next_class">Next Class</string>
+    <string name="close">Close</string>
+    <string name="exam_mode_summary_off">Turns off class notifications</string>
+    <string name="exam_mode_summary_on">Class notifications turned off</string>
+    <string name="exam_mode">Exam/Holiday Mode</string>
+    <string name="ind_notif_summary">Turn on/off individual class\' notifications</string>
+    <string name="ind_notif">Notification Settings</string>
+    <string name="battery_summary">Turn off battery optimizations to receive notifications on time</string>
+    <string name="battery_opt">Battery Optimizations</string>
+    <string name="github_repo">GitHub Repository</string>
+    <string name="gdscvit">GDSC VIT</string>
+    <string name="exam_mode_alert">Exam/Holiday mode turned on</string>
 </resources>
