--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="done">Done</string>
     <string name="no_classes_today">No classes today!</string>
     <string name="no_more_classes_today">No More Classes Today</string>
-    <string name="no_classes_today_subtext">Chill and relax in hostel</string>
+    <string name="no_classes_today_subtext">Catch up on some sleep</string>
     <string name="intro1_title">Never miss a class</string>
     <string name="intro1_subtitle">Notifications to remind you about your upcoming classes</string>
     <string name="intro2_title">Get a sneak peek</string>
@@ -45,6 +45,7 @@
     <string name="follow_instructions">Please follow the instructions!</string>
     <string name="updated">Updating…</string>
     <string name="battery">Battery</string>
+    <string name="nav">Navigation</string>
     <string name="new_updates">What\'s New?</string>
     <string name="account_details">Account Details</string>
     <string name="notif_group">Courses</string>
@@ -54,7 +55,8 @@
     <string name="about_widgets">Go to your home screen, long press and add widget!\n\nYou have two widgets to choose from:\n1. Today\'s Schedule: This shows your current day\'s classes.\n2. Next class: This gives you the details about your next upcoming class.</string>
     <string name="about_notifications">Get control of the notifications by tapping on ⋮ > Settings > Notifications.\n\nThere you can:\n1. Turn on Exam/Holiday Mode to pause your class notifications.\n2. Individually turn on/off notifications for your classes (Android 8+ only).</string>
     <string name="about_battery">To get notifications on time, keep the battery optimisations for the app turned off.\n\nTo change this setting, tap on ⋮ > Settings > Battery.</string>
-    <string name="about_new_updates">Don\'t know which class is where? Don\'t worry, we\'ve got you covered!\n\nNow you can hit the directions button on the Next Class widget or tap on a room number in the app to start navigation to your class!</string>
+    <string name="about_nav">Don\'t know which class is where? Don\'t worry, we\'ve got you covered!\n\nNow you can hit the directions button on the Next Class widget or tap on a room number in the app to start navigation to your class!</string>
+    <string name="about_new_updates">Minor bug fixes!</string>
     <string name="final_heading">Let\'s go!</string>
     <string name="about_final">You\'re all set to start using the app.</string>
     <string name="congratulations">Congratulations!</string>
@@ -88,7 +90,7 @@
     <string-array name="no_classes_today_subtext_list_online">
         <item>Don\'t you have a quiz coming up?</item>
         <item>Finish your DAs!</item>
-        <item>Read a book!</item>
-        <item>Catch up on some sleep!</item>
+        <item>Read a book</item>
+        <item>Catch up on some sleep</item>
     </string-array>
 </resources>
