feat: support card added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,9 @@
     <string name="default_notification_channel_name">Updates</string>
     <string name="default_notification_channel_id">con.dscvit.vitty-Updates</string>
     <string name="directions">Directions</string>
+    <string name="facing_issues_title">Facing any issues? Contact us!</string>
+    <string name="facing_issues_description">We are available on Telegram throughout the day ready to fix your problems!</string>
+    <string name="telegram_link"><u>https://dscv.it/telegram</u></string>
     <string-array name="no_classes_today_subtext_list">
         <item>Don\'t you have a quiz coming up?</item>
         <item>Finish your DAs!</item>
