--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="about_notifications">Get control of the notifications by tapping on ⋮ > Settings > Notifications.\n\nThere you can:\n1. Turn on No CLasses Mode to pause your class notifications.\n2. Individually turn on/off notifications for your classes (Android 8+ only).</string>
     <string name="about_battery">To get notifications on time, keep the battery optimisations for the app turned off.\n\nTo change this setting, tap on ⋮ > Settings > Battery.</string>
     <string name="about_nav">Don\'t know which class is where? Don\'t worry, we\'ve got you covered!\n\nNow you can hit the directions button on the Next Class widget or tap on a room number in the app to start navigation to your class!</string>
-    <string name="about_new_updates">1. VIT Events is now available on VITTY.\n2. Share your timetable with your friends.\n3. Exam/Holiday Mode is now called No Classes Mode.</string>
+    <string name="about_new_updates">1. Exam/Holiday Mode is now called No Classes Mode.</string>
     <string name="final_heading">Let\'s go!</string>
     <string name="about_final">You\'re all set to start using the app.</string>
     <string name="congratulations">Congratulations!</string>
@@ -84,6 +84,8 @@
     <string name="telegram_link"><u>https://dscv.it/telegram</u></string>
     <string name="support">Support</string>
     <string name="sample_room">SJT101</string>
+    <string name="title_schedule">Timetable</string>
+    <string name="title_community">Community</string>
     <string-array name="no_classes_today_subtext_list">
         <item>Don\'t you have a quiz coming up?</item>
         <item>Finish your DAs!</item>
